dinoco_docs/src/content/v0.0.1/fr-fr/orm/find-first.mdx
export const title = "find_first";

# find_first

Utilisé pour rechercher au maximum un enregistrement.

---

## Ce que vous pouvez faire

Il expose les mêmes méthodes que `find_many` :

- `select`
- `cond`
- `take`
- `skip`
- `order_by`
- `includes`
- `count`
- `read_in_primary`
- `execute`

## Description des méthodes

- `.select::&lt;T&gt;()` : échange la projection par défaut contre une projection personnalisée.
- `.cond(...)` : ajoute des filtres à la recherche.
- `.take(...)` : limite le nombre maximal d'enregistrements considérés.
- `.skip(...)` : saute des enregistrements avant de sélectionner le premier résultat.
- `.order_by(...)` : définit quel enregistrement doit être considéré en premier.
- `.includes(...)` : charge les relations avec l'élément principal.
- `.count(...)` : calcule les compteurs de relations dans la projection.
- `.read_in_primary()` : force la lecture sur la base de données principale.
- `.execute(&client)` : exécute la requête et retourne au maximum un élément.

## Retour

Sans `select::&lt;T&gt;()`, le retour est :

```rust
DinocoResult<Option<M>>
```

Avec `select::&lt;T&gt;()`, le retour devient :

```rust
DinocoResult<Option<T>>
```

## Exemple basique

```rust
let user = dinoco::find_first::<User>()
    .cond(|w| w.id.eq(10))
    .execute(&client)
    .await?;
```

## Exemple avec select

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserSummary {
    id: i64,
    name: String,
}

let user = dinoco::find_first::<User>()
    .select::<UserSummary>()
    .cond(|w| w.id.eq(1_i64))
    .execute(&client)
    .await?;
```

## Exemple avec relation

```rust
#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
struct UserWithPosts {
    id: i64,
    name: String,
    posts: Vec<Post>,
}

let user = dinoco::find_first::<User>()
    .select::<UserWithPosts>()
    .cond(|x| x.id.eq(1_i64))
    .includes(|x| x.posts())
    .execute(&client)
    .await?;
```

## Exemple avec tri

```rust
let latest_user = dinoco::find_first::<User>()
    .order_by(|x| x.id.desc())
    .execute(&client)
    .await?;
```

## Prochaines étapes

- [**`find_many::&lt;M&gt;()`**](/v0.0.1/orm/find-many) : recherche plusieurs enregistrements.
- [**`count::&lt;M&gt;()`**](/v0.0.1/orm/count) : comptage d'enregistrements.
